--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="monetization" content="$coil.xrptipbot.com/VwAzTMYJRImKu0mJZQi1Dg">
   <script src="game.js"></script>
   <link rel="stylesheet" href="style.css" />
 </head>
