--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta name="monetization" content="$coil.xrptipbot.com/VwAzTMYJRImKu0mJZQi1Dg">
   <script src="game.js"></script>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
   <div id="stage">
-    <canvas></canvas>
+    <canvas width="512" height="288"></canvas>
   </div>
 </body>
+
 </html>
